; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/hexagon/gnu/extr_hexagon-opc.c_hexagon_opcode_lookup_dis.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/hexagon/gnu/extr_hexagon-opc.c_hexagon_opcode_lookup_dis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@icode_map = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @hexagon_opcode_lookup_dis(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32**, i32*** @icode_map, align 8
  %5 = icmp ne i32** %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i32**, i32*** @icode_map, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @HEXAGON_HASH_ICODE(i32 %8)
  %10 = getelementptr inbounds i32*, i32** %7, i64 %9
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %2, align 8
  br label %13

12:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %13

13:                                               ; preds = %12, %6
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}

declare dso_local i64 @HEXAGON_HASH_ICODE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
